# CustomVoiceAgent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: agent.yaml  asr_finetune.yaml  rag.yaml
data/: README.md
data/corpus/: education.md  faq.md  resume.md
data/corpus/projects/: fifa-graphs.md  reparo.md  smart-bin.md  voice-agent.md  watonomous.md
data/corpus/work/: bmo.md  warg.md
data/evals/: adversarial.jsonl  agent_eval.jsonl  asr_eval.jsonl  rag_qa.jsonl
docs/: PLAN.md
evals/: common.py  report.py  run_agent_eval.py  run_asr_eval.py  run_rag_eval.py  run_redteam.py
notebooks/: asr_finetune_pytorch.ipynb
src/: config.py  llm.py
src/agent/: graph.py  persona.py  prompts.py  tools.py
src/asr/: export.py  gen_sentences.py  prepare_data.py  synthesize.py  train.py  transcribe.py
src/guardrails/: input_guard.py  output_guard.py  policy.py
src/rag/: ingest.py  retrieve.py  store.py
src/server/: app.py  vad.py
src/tts/: chunker.py  speak.py
static/: index.html
tests/: test_chunker.py  test_graph.py  test_input_guard.py  test_llm.py  test_output_guard.py  test_policy.py  test_report.py  test_synth_data.py
